; ModuleID = '/home/carl/AnghaBench/git/extr_pack-bitmap-write.c_show_object.c'
source_filename = "/home/carl/AnghaBench/git/extr_pack-bitmap-write.c_show_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object = type { i32 }
%struct.bitmap = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.object*, i8*, i8*)* @show_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_object(%struct.object* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.object*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.bitmap*, align 8
  store %struct.object* %0, %struct.object** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.bitmap*
  store %struct.bitmap* %9, %struct.bitmap** %7, align 8
  %10 = load %struct.bitmap*, %struct.bitmap** %7, align 8
  %11 = load %struct.object*, %struct.object** %4, align 8
  %12 = getelementptr inbounds %struct.object, %struct.object* %11, i32 0, i32 0
  %13 = call i32 @find_object_pos(i32* %12)
  %14 = call i32 @bitmap_set(%struct.bitmap* %10, i32 %13)
  %15 = load %struct.object*, %struct.object** %4, align 8
  %16 = call i32 @mark_as_seen(%struct.object* %15)
  ret void
}

declare dso_local i32 @bitmap_set(%struct.bitmap*, i32) #1

declare dso_local i32 @find_object_pos(i32*) #1

declare dso_local i32 @mark_as_seen(%struct.object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
